fixed table sorting icons visibilityimplroved

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -158,7 +158,8 @@ ul#strength {
   border-spacing: 0 0;
 }
 
-.fmu-table > thead > tr:nth-child(2) {
+.fmu-table > thead > tr:nth-child(2),
+.fmu-table > thead > tr:only-child {
     background-color: #3c4e57;
     color: #ffffff;
 }
@@ -187,14 +188,23 @@ ul#strength {
 .fmu-table > thead > tr:first-child > th {
     border: none;
     padding: 5px 10px;
-    empty-cells: hide;
     border-radius: 10px 10px 0 0;
-    box-shadow: 1px 3px 3px 2px #999;
+    text-align: center;
 }
 
 /* Data headers */
-.fmu-table > thead > tr:last-child > th:first-child {
+.fmu-table > thead > tr:only-child > th {
+    border-radius: 0;
+}
+
+.fmu-table > thead > tr:last-child > th:first-child,
+.fmu-table > thead > tr:only-child > th:first-child{
     border-radius: 5px 0 0 0;
+}
+
+.fmu-table > thead > tr:last-child > th:only-child,
+.fmu-table > thead > tr:only-child > th:only-child {
+    border-radius: 5px 5px 0 0 !important;
 }
 
 .fmu-table > thead > tr:last-child > th:last-child {
@@ -272,7 +282,7 @@ ul#strength {
     right: 8px;
     top: 50%;
     position: absolute;
-    opacity: .3;
+    opacity: 1;
     margin-top: -4px;
 }
 .ng-table th.sortable div:before {
@@ -283,6 +293,15 @@ ul#strength {
     border-top: 4px solid #ffffff;
 }
 
+.ng-table th.sortable.sort-asc div:after,
+.ng-table th.sortable.sort-desc div:after,
+.ng-table th.sortable.sort-asc div:hover:after {
+    visibility: visible;
+    filter: alpha(opacity=100);
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    opacity: 1;
+}
 .invisible-header {
     color: rgba(0, 0, 0, 0);
     border-left-color: rgba(0, 0, 0, 0);
@@ -615,7 +634,7 @@ h2{
 .fmu-form-header {
     display: block;
     position: relative;
-    text-align: center;
+    text-align: left;
     padding-left: 1em;
     padding-right: 1em;
     border-bottom: 1px solid #ddd;
@@ -711,9 +730,9 @@ h2{
 }
 
 .menu-shadow{
-	-webkit-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5) !important;
+    -moz-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5) !important;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5) !important;
 }
 
 .fast {
@@ -733,7 +752,9 @@ h2{
 .fmu-nav {
     background-color: #9DA6AB;
     border: none;
-    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+    -webkit-box-shadow: 0 2px 2px -1px #000000;
+    -moz-box-shadow: 0 2px 2px -1px #000000;
+    box-shadow: 0 2px 2px -1px #000000;
     color: #ffffff;
 }
 
